// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Can have different margins 1`] = `
.emotion-0 {
  margin: 10px;
}

<Styled(div)
  m={10}
>
  <div
    className="emotion-0"
  />
</Styled(div)>
`;

exports[`Can have different margins 2`] = `
.emotion-0 {
  margin-left: 5px;
  margin-right: 5px;
  margin-top: 10px;
  margin-bottom: 10px;
}

<Styled(div)
  mx={5}
  my={10}
>
  <div
    className="emotion-0"
  />
</Styled(div)>
`;

exports[`Can have different margins 3`] = `
.emotion-0 {
  margin-bottom: 1px;
  margin-left: 2px;
  margin-right: 4px;
  margin-top: 3px;
}

<Styled(div)
  mb="1px"
  ml="2px"
  mr="4px"
  mt="3px"
>
  <div
    className="emotion-0"
  />
</Styled(div)>
`;

exports[`Can have different paddings 1`] = `
.emotion-0 {
  padding: 10px;
}

<Styled(div)
  p={10}
>
  <div
    className="emotion-0"
  />
</Styled(div)>
`;

exports[`Can have different paddings 2`] = `
.emotion-0 {
  padding-left: 5px;
  padding-right: 5px;
  padding-top: 10px;
  padding-bottom: 10px;
}

<Styled(div)
  px={5}
  py={10}
>
  <div
    className="emotion-0"
  />
</Styled(div)>
`;

exports[`Can have different paddings 3`] = `
.emotion-0 {
  padding-bottom: 1px;
  padding-left: 2px;
  padding-right: 4px;
  padding-top: 3px;
}

<Styled(div)
  pb="1px"
  pl="2px"
  pr="4px"
  pt="3px"
>
  <div
    className="emotion-0"
  />
</Styled(div)>
`;
